--- a/.github/workflows/PR.yaml
+++ b/.github/workflows/PR.yaml
@@ -43,3 +43,9 @@ jobs:
         with:
           name: jacoco-report
           path: target/site/jacoco/
+
+      - name: Analyze with SonarCloud
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TEST_CI -Dsonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
