--- a/.github/workflows/PROD.yaml
+++ b/.github/workflows/PROD.yaml
@@ -15,10 +15,11 @@ jobs:
       - name: show message
         run: |
           echo "Log level: ${{ github.event.inputs.message }}"
-      - name: set up JDK 17
-        uses: actions/setup-java@v1
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@v1.2.1
         with:
           java-version: 17
+          maven-version: 3.8.2
       - name: Maven deploy
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
