--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,5 +28,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          load: true
           push: true
           tags: catfindus/javarus-server:latest
