--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:v0.11.0
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
